# teradata-ice-code

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
include/: IceKey.h
src/: IceCode.cpp  IceKey.cpp
